# Kafka-CPP

KafkaConsumer1/: CMakeLists.txt  README.txt  main.cpp
KafkaConsumer1/cmake_modules/: FindRdKafka.cmake
Producer/: CMakeLists.txt  main.cpp
kf/: CMakeLists.txt  main.cpp
